--- a/Atelier3/Views/School/Create.cshtml
+++ b/Atelier3/Views/School/Create.cshtml
@@ -25,9 +25,9 @@
                     <input asp-for="SchoolAdress" class="form-control" />
                     <span asp-validation-for="SchoolAdress" class="text-danger"></span>
                 </div>
-
+                <br />
                 <div class="form-group">
-                    <input type="submit" value="Create" class="btn btn-primary" />
+                    <input type="submit" value="Create" class="btn btn-primary" style="background-color:cadetblue ; border: cadetblue" />
                 </div>
             </form>
         </div>
