--- a/Atelier3/Views/School/Index.cshtml
+++ b/Atelier3/Views/School/Index.cshtml
@@ -6,9 +6,9 @@
 
 <div class="container mt-4">
     <h1 class="text-center" style="color: #7CB9E8;">List of schools</h1>
-
+    <br />
     <p>
-        <a class="btn btn-primary" asp-action="Create">Create New school</a>
+        <a class="btn btn-primary" asp-action="Create" style="background-color:cadetblue ; border: cadetblue">Create New school</a>
     </p>
 
     <table class="table table-striped table-bordered table-hover">
