--- a/Atelier3/Views/Student/Create.cshtml
+++ b/Atelier3/Views/Student/Create.cshtml
@@ -6,7 +6,8 @@
 
 <div class="container mt-4">
     <h1 class="text-center">Create a Student</h1>
-    <h4 class="text-info">Please complete the information below:</h4>
+    <br />
+    <h4 class="text-info" style="color:#f34e4e !important ; text-shadow: 0 0 black;">Please complete the information below:</h4>
     <hr />
 
     <div class="row">
@@ -41,7 +42,7 @@
                 </div>
 
                 <div class="form-group mt-4">
-                    <input type="submit" value="Create" class="btn btn-primary" />
+                    <input type="submit" value="Create" class="btn btn-primary" style="background-color:cadetblue ; border: cadetblue" />
                 </div>
             </form>
         </div>
