--- a/Atelier3/Views/Student/Edit.cshtml
+++ b/Atelier3/Views/Student/Edit.cshtml
@@ -39,7 +39,7 @@
                 </div>
 
                 <div class="form-group">
-                    <input type="submit" value="Save" class="btn btn-primary" />
+                    <input type="submit" value="Save" class="btn btn-primary" style="background-color:cadetblue ; border: cadetblue" />
                 </div>
             </form>
         </div>
